# Thesis

./: .gitignore  component.xml  design_1_wrapper.hdf  env.sh  full_dma.bit  tmp_edit_project.xpr
CodeTest/: MRELBP_base.py  MRELBP_cus.py  interpolation.py  lbp.py
CodeTest/c++/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Makefile  auto.sh  build.ninja  cmake_install.cmake  mrelbp  mrelbp.cpp
Draw/: FullArc.drawio  SoC.drawio  riu2.drawio
Ex/: median_3x3_custome.py  median_5x5_custome.py  median_o.py  median_res.py  mrelbp.py  output.txt  output1.txt  output2.txt  output_3x3.txt  output_5x5.txt  sort7.py  test.py
Sche/: MedianSystolicModule.drawio  TopLevel.drawio
Src/: MRELBP.cr.mti  MRELBP.mpf  MRELBP_CI_R2.v  MRELBP_CI_R2.v.bak  MRELBP_CI_R2_tb.v  MRELBP_CI_R2_tb.v.bak  transcript  vsim.wlf
Test_vivado/: Test_vivado.xpr
Thesis/: Thesis.xpr
Zedboard/: Zedboard.xpr
Zedboard_Ts/: Zedboard_Ts.xpr
Zedboard_v/: Zedboard_v.xpr
auto_scripts/: MRELBP.py  au_py.py  gen_inp.py  histogram_layered_test.txt  histogram_o.txt  random_matrix.txt  vi.tcl  vivado.jou  vivado_10144.backup.jou  vivado_1144.backup.jou  vivado_15572.backup.jou  vivado_15912.backup.jou  vivado_16252.backup.jou  vivado_16556.backup.jou  vivado_16560.backup.jou  vivado_16700.backup.jou  vivado_17056.backup.jou  vivado_17576.backup.jou  vivado_18440.backup.jou  vivado_18472.backup.jou  vivado_18536.backup.jou  vivado_2532.backup.jou  vivado_3312.backup.jou  vivado_4036.backup.jou  vivado_448.backup.jou  vivado_7188.backup.jou  vivado_7852.backup.jou  vivado_8996.backup.jou  (+1 more)
(+5052 files in other folders)
